saved index.html and style.css

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
                     Holden
                 </p>
                 <h1>
-                    Hi, I'm Holden from LA. I'm interested in robotics.
+                    Hi, I'm Holden! I like robotics, skateboarding, and baseball! I am an incoming 9th grader at Fairfax High School in Los Angeles, California.
                 </h1>
             </div>
         </div>
