finished main areas of website, still need to style and add details to finish

--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Holden's Portfolio</title>
     <link rel="stylesheet" href="style.css">
-    
+    <script src="https://kit.fontawesome.com/a931798879.js" crossorigin="anonymous">
+    </script>
 </head>
 <body>
     <div id="HomePage">
@@ -13,26 +14,28 @@
             <nav>
                 <ul>
                     <li>
-                        <a>
+                      <a href="#HomePage">
                             Home
                         </a>
                     </li>
                     <li>
-                        <a>
+                        <a href="#about">
                             About
                         </a>
                     </li>
                     <li>
-                        <a>
+                        <a href="#portfolio">
+                            Projects
+                        </a>
+                    </li>
+                    <li>
+                        <a href="#contact">
                             Contact
                         </a>
                     </li>
                 </ul>
             </nav>
             <div class="header-text">
-                <p>
-                    Holden
-                </p>
                 <h1>
                     Hi, I'm Holden! I like robotics, skateboarding, and baseball! I am an incoming 9th grader at Fairfax High School in Los Angeles, California.
                 </h1>
@@ -91,6 +94,51 @@
                     </div>
                 </div>
             </div>
+        </div>
+    </div>
+    <div id="portfolio">
+        <div class="container">
+            <h1 class="my-projects">
+                My Projects
+            </h1>
+            <div class="project-list">
+                <div>
+                    <h2 class="eagle-project">
+                        Eagle Project
+                    </h2>
+                    <p>
+                        I am creating 100 engineering related kits to help students in central LA get a good idea about what engineering is all about! I have currently created 40 kits.
+                    </p>
+                </div>
+                <div>
+                    <h2 class="robotics">
+                        Robot Creation
+                    </h2>
+                    <p>
+                        I am currently working on a robot for the new VEX robotics season. This robot will be able to carry 20 "blocks", or game elements.
+                    </p>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div id="contact">
+        <div class="container">
+            <h1 class="contact-me">
+                Contact Me
+            </h1>
+            <p>
+                <i class="fa-solid fa-paper-plane">
+                </i>
+                Email: holdenetsao@gmail.com
+            </p>
+            <p>
+                <i class="fa-solid fa-phone">
+                </i>
+                Phone Number: 213-588-4487
+            </p>
+            <a href="Resume.pdf" download class="button">
+                Download Resume
+            </a>
         </div>
     </div>
     <script>
