finished inital draft of website, still needs more design

--- a/index.html
+++ b/index.html
@@ -129,7 +129,9 @@
             <p>
                 <i class="fa-solid fa-paper-plane">
                 </i>
-                Email: holdenetsao@gmail.com
+                <a href="" download class="button">
+                    Email: holdenetsao@gmail.com
+                </a>
             </p>
             <p>
                 <i class="fa-solid fa-phone">
@@ -137,6 +139,8 @@
                 Phone Number: 213-588-4487
             </p>
             <a href="Resume.pdf" download class="button">
+                <i class="fa-solid fa-file">
+                </i>
                 Download Resume
             </a>
         </div>
